The Plugins folder added

--- a/PluginImplementation/PluginImplementation.Web/PluginImplementation.Web.csproj
+++ b/PluginImplementation/PluginImplementation.Web/PluginImplementation.Web.csproj
@@ -186,6 +186,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Plugins\ExamplePlugin.dll" />
+    <Content Include="Plugins\ExamplePlugin2.dll" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -238,7 +240,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Plugins\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
